file path fixing

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
                                 <circle cx="12" cy="7" r="4"></circle>
                             </svg> -->
-                            <img src="/assets/images/profile.jpg" alt="" srcset="">
+                            <img src="assets/images/profile.jpg" alt="" srcset="">
                         </div>
                     </div>
                     <div class="w-full lg:w-2/3" data-aos="fade-left" data-aos-delay="200">
@@ -371,7 +371,7 @@
                     <div class="mb-4 flex justify-center">
                         <div
                             class="bg-cyber-dark w-32 h-32 flex items-center justify-center group-hover:bg-neon-purple/5 transition-all overflow-hidden">
-                            <img src="/assets/images/CyberOpsAssoc.png" alt="Cisco CyberOps Associate Badge"
+                            <img src="assets/images/CyberOpsAssoc.png" alt="Cisco CyberOps Associate Badge"
                                 class="w-full h-full object-contain" srcset="">
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                     <div class="bg-cyber-dark p-6 rounded-lg shadow-lg border border-neon-purple/20 hover:shadow-neon-purple transition-all group" data-aos="zoom-in" data-aos-delay="200">
                         <div class="mb-4 flex justify-center">
                             <div class="bg-cyber-dark w-32 h-32 flex items-center justify-center group-hover:bg-neon-purple/5 transition-all overflow-hidden">
-                                <img src="/assets/images/cybersecurity-essentials.png" alt="cybersecurity-essentials" srcset="">
+                                <img src="assets/images/cybersecurity-essentials.png" alt="cybersecurity-essentials" srcset="">
                             </div>
                         </div>
                         <h3 class="text-xl font-cyber font-bold text-center mb-2 text-cyber-light">Cisco Cybersecurity Essentials</h3>
@@ -412,7 +412,7 @@
                     <div class="bg-cyber-dark p-6 rounded-lg shadow-lg border border-neon-purple/20 hover:shadow-neon-purple transition-all group" data-aos="zoom-in" data-aos-delay="300">
                         <div class="mb-4 flex justify-center">
                             <div class="bg-cyber-dark w-32 h-32 flex items-center justify-center group-hover:bg-neon-purple/5 transition-all overflow-hidden">
-                                <img src="/assets/images/it-essentials.png" alt="it-essentials" srcset="">
+                                <img src="assets/images/it-essentials.png" alt="it-essentials" srcset="">
                             </div>
                         </div>
                         <h3 class="text-xl font-cyber font-bold text-center mb-2 text-cyber-light">Cisco IT Essentials</h3>
@@ -464,7 +464,7 @@
                     <!-- Project 1 -->
                     <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group" data-category="security" data-aos="fade-up" data-aos-delay="100">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
-                            <img src="/assets/images/skills.jpeg" alt="" srcset="">
+                            <img src="assets/images/skills.jpeg" alt="" srcset="">
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-cyber font-bold mb-2 text-neon-blue">SIEM Implementation</h3>
@@ -486,7 +486,7 @@
                     <!-- Project 2 -->
                     <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group" data-category="web" data-aos="fade-up" data-aos-delay="200">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
-                            <img src="/assets/images/skills.jpeg" alt="" srcset="">
+                            <img src="assets/images/skills.jpeg" alt="" srcset="">
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-cyber font-bold mb-2 text-neon-blue">Secure Web Application</h3>
@@ -508,7 +508,7 @@
                     <!-- Project 3 -->
                     <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group" data-category="network" data-aos="fade-up" data-aos-delay="300">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
-                            <img src="/assets/images/skills.jpeg" alt="" srcset="">
+                            <img src="assets/images/skills.jpeg" alt="" srcset="">
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-cyber font-bold mb-2 text-neon-blue">Network Monitoring Tool</h3>
@@ -530,7 +530,7 @@
                     <!-- Project 4 -->
                     <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group" data-category="security" data-aos="fade-up" data-aos-delay="400">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
-                            <img src="/assets/images/skills.jpeg" alt="" srcset="">
+                            <img src="assets/images/skills.jpeg" alt="" srcset="">
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-cyber font-bold mb-2 text-neon-blue">Security Documentation Framework</h3>
@@ -552,7 +552,7 @@
                     <!-- Project 5 -->
                     <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group" data-category="web" data-aos="fade-up" data-aos-delay="500">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
-                            <img src="/assets/images/skills.jpeg" alt="" srcset="">
+                            <img src="assets/images/skills.jpeg" alt="" srcset="">
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-cyber font-bold mb-2 text-neon-blue">Web Vulnerability Scanner</h3>
@@ -574,7 +574,7 @@
                     <!-- Project 6 -->
                     <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group" data-category="network" data-aos="fade-up" data-aos-delay="600">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
-                            <img src="/assets/images/skills.jpeg" alt="" srcset="">
+                            <img src="assets/images/skills.jpeg" alt="" srcset="">
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-cyber font-bold mb-2 text-neon-blue">Secure Server Hardening</h3>
@@ -620,17 +620,17 @@
                         
                         <div class="flex justify-center space-x-6 mt-6">
                             <a href="#" class="w-12 h-12 rounded-full bg-cyber-darker border border-neon-green/50 flex items-center justify-center text-neon-green ">
-                                <img src="/assets/images/facebook.png" alt="facebook" srcset="">
+                                <img src="assets/images/facebook.png" alt="facebook" srcset="">
                             </a>
                             <a href="#" class="w-12 h-12 rounded-full bg-cyber-darker border border-neon-green/50 flex items-center justify-center text-neon-green">
-                                <img src="/assets/images/github.png" alt="github" srcset="">
+                                <img src="assets/images/github.png" alt="github" srcset="">
                             </a>
                             <a href="#" class="w-12 h-12 rounded-full bg-cyber-darker border border-neon-green/50 flex items-center justify-center text-neon-green ">
-                                <img src="/assets/images/whatsapp.png" alt="whatsapp" srcset="">
+                                <img src="assets/images/whatsapp.png" alt="whatsapp" srcset="">
                             </a>
                             <a href="#"
                                 class="w-12 h-12 bg-cyber-darker border border-neon-green/50 flex items-center justify-center text-neon-green">
-                                <img src="/assets/images/linkdin.png" alt="linkdin" srcset="">
+                                <img src="assets/images/linkdin.png" alt="linkdin" srcset="">
                             </a>
                         </div>
                     </div>
@@ -663,7 +663,7 @@
 
     <!-- Back to Top Button -->
     <button id="back-to-top" class="fixed bottom-8 right-8 bg-neon-blue/80 text-cyber-dark w-12 h-12  flex items-center justify-center shadow-neon-blue opacity-0 invisible transition-all z-50">
-        <img src="/assets/images/back-to-top-btn.png" alt="back-to-top-btn" srcset="">
+        <img src="assets/images/back-to-top-btn.png" alt="back-to-top-btn" srcset="">
     </button>
 
     <!-- Scripts -->
