refactor: comment out project cards in index.html for future use

--- a/index.html
+++ b/index.html
@@ -554,15 +554,15 @@
                                 <span
                                     class="px-2 py-1 bg-neon-blue/10 text-neon-blue text-xs rounded-full font-mono">Automation</span>
                             </div>
-                            <a href="#" class="text-neon-blue hover:underline font-cyber inline-flex items-center">
+                            <!-- <a href="#" class="text-neon-blue hover:underline font-cyber inline-flex items-center">
                                 <span>View Details</span>
                                 <i class="fas fa-arrow-right ml-2"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
                     <!-- Project 2 -->
-                    <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group"
+                    <!-- <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group"
                         data-category="web" data-aos="fade-up" data-aos-delay="200">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
                             <img src="assets/images/skills.jpeg" alt="" srcset="">
@@ -586,10 +586,10 @@
                                 <i class="fas fa-arrow-right ml-2"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Project 3 -->
-                    <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group"
+                    <!-- <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group"
                         data-category="network" data-aos="fade-up" data-aos-delay="300">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
                             <img src="assets/images/skills.jpeg" alt="" srcset="">
@@ -613,10 +613,10 @@
                                 <i class="fas fa-arrow-right ml-2"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Project 4 -->
-                    <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group"
+                    <!-- <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group"
                         data-category="security" data-aos="fade-up" data-aos-delay="400">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
                             <img src="assets/images/skills.jpeg" alt="" srcset="">
@@ -641,10 +641,10 @@
                                 <i class="fas fa-arrow-right ml-2"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Project 5 -->
-                    <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group"
+                    <!-- <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group"
                         data-category="web" data-aos="fade-up" data-aos-delay="500">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
                             <img src="assets/images/skills.jpeg" alt="" srcset="">
@@ -668,10 +668,10 @@
                                 <i class="fas fa-arrow-right ml-2"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Project 6 -->
-                    <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group"
+                    <!-- <div class="project-card bg-cyber-darker rounded-lg overflow-hidden shadow-lg border border-neon-blue/20 hover:shadow-neon-blue transition-all group"
                         data-category="network" data-aos="fade-up" data-aos-delay="600">
                         <div class="h-48 bg-cyber-dark flex items-center justify-center p-4">
                             <img src="assets/images/skills.jpeg" alt="" srcset="">
@@ -695,10 +695,10 @@
                                 <i class="fas fa-arrow-right ml-2"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
-        </section>
+        </section> 
 
         <!-- Contact Section -->
         <section id="contact" class="py-20 bg-cyber-darker relative">
